Fixed some button spacings

--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -258,11 +258,17 @@
             background-color: darken($color-twitter, 11%)
     
     &-share
+        padding: 15px 20px
+        height: 46px
+
         i
             font-size: 22px
             line-height: 15px
+            margin-right: 20px - 4px
+            margin-left: 4px
 
-        i:nth-child(2)
+        .pu-sub-check
+            margin-right: -1px
             float: right
             opacity: 0
             transition: opacity $animation-duration
